--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,10 @@
 
             <p>Enter your command:</p>
             <form method="post" action=".">
-                <p><input name="text1" /></p>
+                <p><input name="player_command" /></p>
                 <p><input type="submit" value="Perform Command" /></p>
             </form>
 
-            <p>Click <a href="/readme">here</a> to go to Read Me.</p>
         </div>
     </body>
 </html>
