more flask testing... new Reset button idea

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             <p>Enter your command:</p>
             <form method="post" action=".">
                 <p><input name="player_command" /></p>
-                <p><input type="submit" value="Perform Command" /></p>
+                <p><input type="submit" value="Submit" /></p>
             </form>
 
         </div>
