CSS and Alchemy changes (Alchemy still not working)

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,12 @@
 
 
 {% block head %}
-<title>Dark Castle</title>
+<title><h1>Dark Castle</h1></title>
 {% endblock %}
 
 {% block body %}
 <div class="container">
-    <h1>Welcome to Dark Castle!</h2>
+    <h1>Welcome to Dark Castle!</h1>
     <br>
     <p>Adventure Text:</p>
     <p>{{ output }}</p>
