--- a/templates/base_old.html
+++ b/templates/base_old.html
@@ -2,11 +2,19 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+        <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
         {% block head %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
     </body>
 </html>
+
+
+
+
+
+
+
+
 
