--- a/templates/index_old.html
+++ b/templates/index_old.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dark Castle</title>
+        <title><h1>Dark Castle</h1></title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
     </head>
     <body>
         <div class="container">
-            <h1>Welcome to Dark Castle!</h2>
+            <h1>Welcome to Dark Castle!</h1>
             <br>
 
             <p>Adventure Text:</p>
