Create table in index.html for moves & score

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,16 @@
 {% block body %}
 <div class="container">
     <h1>Welcome to Dark Castle!</h1>
+    <table>
+        <tr>
+            <th>Moves</th>
+            <th>Score</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
     <br>
     <p>Adventure Text:</p>
     <p>{{ output }}</p>
