index.html updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<title><h1>Dark Castle</h1></title>
+<title>Dark Castle</title>
 {% endblock %}
 
 {% block body %}
@@ -29,5 +29,23 @@
         <p><input type="submit" name="Restart" value="Restart" /></p>
     </form>
 </div>
+
+{% for x in range(4) %}
+    {% if x % 2 == 1 %}
+        <p>{{x}}</p>
+    {% endif %}
+{% endfor %}
+
+{% for x in my_list %}
+    <p>{{x}}</p>
+    {% if x == 'red' %}
+        <h3>RED</h3>
+    {% elif x == 'blue' %}
+        <h2>BLUE</h2>
+    {% else %}
+        <h4>NOT red or blue</h4>
+    {% endif %}
+{% endfor %}
+
 {% endblock %}
 
