more flask fun - working through tutorial videos

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
     <p>{{ output }}</p>
     <br>
     <p>Enter your command:</p>
-    <form method="POST" action=".">
-        <p><input name="player_command" /></p>
+    <form method="POST" action="#">
+        <p><input type = "text" name="player_command" /></p>
         <p><input type="submit" name="Submit" value="Submit" /></p>
         <p><input type="submit" name="Restart" value="Restart" /></p>
     </form>
