--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,13 @@
 {% block body %}
 <div class="container">
     <h1>Welcome to Dark Castle!</h1>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for msg in messages %}
+                <p>{{ msg }}</p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <table>
         <tr>
             <th>Moves</th>
