--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
     <p>Enter your command:</p>
     <form method="POST" action="#">
         <p><input type = "text" name="player_command" /></p>
-        <p><input type="submit" name="Submit" value="Submit" /></p>
-        <p><input type="submit" name="Restart" value="Restart" /></p>
+        <p><input type="submit" name="submit_button" value="Submit" /></p>
+        <p><input type="submit" name="submit_button" value="Restart" /></p>
     </form>
 </div>
 
@@ -55,4 +55,6 @@
 {% endfor %}
 
 {% endblock %}
+
+
 
