troubleshooting web server lockup issues... maybe time to just host on pythonanywhere?

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <p>{{ output }}</p>
     <br>
     <p>Enter your command:</p>
-    <form method="POST" action="#">
+    <form method="POST" action="">
         <p><input type = "text" name="player_command" /></p>
         <p><input type="submit" name="submit_button" value="Submit" /></p>
         <p><input type="submit" name="submit_button" value="Restart" /></p>
